add eval notebook

--- a/notebook/annotation.ipynb
+++ b/notebook/annotation.ipynb
@@ -2,23 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"a\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -133,7 +116,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Directory containing the images\n",
-    "image_dir = './eval/img'\n",
+    "image_dir = '../slvsh-tr/slvsh_tr/assets/img'\n",
     "\n",
     "# Get all image files in the directory\n",
     "image_files = [f for f in os.listdir(image_dir) if f.lower().endswith('.png')]\n",
@@ -142,9 +125,10 @@
     "image_files.sort()\n",
     "\n",
     "# Iterate through all images\n",
-    "with open('eval/tests.json', 'r') as f:\n",
+    "with open('../slvsh-tr/slvsh_tr/assets/tests.json', 'r') as f:\n",
     "    json_data = json.load(f)\n",
     "existing = {d['image_path'] for d in json_data}\n",
+    "\n",
     "for image_file in image_files:\n",
     "    # Construct the full path to the image\n",
     "    image_path = os.path.join(image_dir, image_file)\n",
