--- a/notebook/yuitaso2.ipynb
+++ b/notebook/yuitaso2.ipynb
@@ -198,13 +198,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "例の評価中: 100%|██████████| 178/178 [01:39<00:00,  1.80it/s]\n"
+      "例の評価中:   0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "例の評価中: 100%|██████████| 10/10 [00:05<00:00,  1.98it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Series([], dtype: float64)"
+       "case_number    5.500000\n",
+       "precision      0.675000\n",
+       "recall         0.960000\n",
+       "f1             0.666667\n",
+       "dtype: float64"
       ]
      },
      "execution_count": 3,
@@ -217,9 +228,9 @@
     "import pandas as pd\n",
     "\n",
     "model = TesseractFindRectWhitningRecognizer()\n",
-    "result = eval(model)\n",
+    "result = eval(model, n_examples=10)\n",
     "\n",
-    "df = pd.DataFrame([r.model_dump() for r in result])\n",
+    "df = pd.DataFrame([r.dump() for r in result])\n",
     "df.mean(numeric_only=True)"
    ]
   },
@@ -229,17 +240,181 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'precision'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_15203/2127068947.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'precision'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.12/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, by, axis, ascending, inplace, kind, na_position, ignore_index, key)\u001b[0m\n\u001b[1;32m   7185\u001b[0m             \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7186\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7187\u001b[0m             \u001b[0;31m# len(by) == 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7189\u001b[0;31m             \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7191\u001b[0m             \u001b[0;31m# need to rewrap column in Series to apply key function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7192\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.12/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1907\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mother_axes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1908\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_level_reference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1909\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1910\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1911\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1912\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1913\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1914\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'precision'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>expected</th>\n",
+       "      <th>case_number</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td></td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>SO .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td></td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>CO OT G44 2 . ,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td></td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>IP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>REVENGE UN SW5 NOSE.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>UN SWS5 NOSE.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>WALLRIDE, SW 3.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>WALLRIDE, SW 3.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>B6. DISASTER TO FLAT</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>B6. DISASTER TO FLAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>SWLIP, SW. SWLIP, SW</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>SWLIP, SW. SWLIP, SW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>2, SAFETY. F4, NOSEDRAG. B2, STALE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2, SAFETY. F4, NOSEDRAG. B2, STALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>NOLLIE. TAIL PRESS THROUGH DFD</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NOLLIE. TAIL PRESS THROUGH DFD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...</td>\n",
+       "      <td>BS, BSLIDE. SLIDE, SW. SWBT, B2. UN2, B2.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>BS, BSLIDE. SLIDE, SW. SWBT, B2. UN2, B2.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          image_path  \\\n",
+       "4  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "8  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "9  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "2  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "0  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "1  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "3  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "5  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "6  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "7  /workspaces/slvsh-index/slvsh-tr/slvsh_tr/asse...   \n",
+       "\n",
+       "                                    expected  case_number  precision  recall  \\\n",
+       "4                                                       6       0.00     1.0   \n",
+       "8                                                      10       0.00     1.0   \n",
+       "9                                                       7       0.00     1.0   \n",
+       "2                       REVENGE UN SW5 NOSE.            1       0.75     0.6   \n",
+       "0                            WALLRIDE, SW 3.            5       1.00     1.0   \n",
+       "1                       B6. DISASTER TO FLAT            8       1.00     1.0   \n",
+       "3                       SWLIP, SW. SWLIP, SW            4       1.00     1.0   \n",
+       "5         2, SAFETY. F4, NOSEDRAG. B2, STALE            3       1.00     1.0   \n",
+       "6             NOLLIE. TAIL PRESS THROUGH DFD            9       1.00     1.0   \n",
+       "7  BS, BSLIDE. SLIDE, SW. SWBT, B2. UN2, B2.            2       1.00     1.0   \n",
+       "\n",
+       "         f1                                 prediction  \n",
+       "4  0.000000                                       SO .  \n",
+       "8  0.000000                            CO OT G44 2 . ,  \n",
+       "9  0.000000                                         IP  \n",
+       "2  0.666667                              UN SWS5 NOSE.  \n",
+       "0  1.000000                            WALLRIDE, SW 3.  \n",
+       "1  1.000000                       B6. DISASTER TO FLAT  \n",
+       "3  1.000000                       SWLIP, SW. SWLIP, SW  \n",
+       "5  1.000000         2, SAFETY. F4, NOSEDRAG. B2, STALE  \n",
+       "6  1.000000             NOLLIE. TAIL PRESS THROUGH DFD  \n",
+       "7  1.000000  BS, BSLIDE. SLIDE, SW. SWBT, B2. UN2, B2.  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -255,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +486,7 @@
        "''"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,34 +595,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating examples: 100%|██████████| 178/178 [00:57<00:00,  3.12it/s]\n"
+      "例の評価中:   0%|          | 0/178 [00:00<?, ?it/s]"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "precision    0.935972\n",
-       "recall       0.927296\n",
-       "f1           0.923074\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = TesseractFindRectWhitning2Recognizer()\n",
     "result = eval(model)\n",
-    "df = pd.DataFrame([r.model_dump() for r in result])\n",
+    "df = pd.DataFrame([r.dump() for r in result])\n",
     "df.mean(numeric_only=True)"
    ]
   },
@@ -1103,7 +1265,7 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame([r.model_dump() for r in result])\n",
+    "df = pd.DataFrame([r.dump() for r in result])\n",
     "df.mean(numeric_only=True)"
    ]
   },
@@ -1586,7 +1748,7 @@
     "model = TesseractFindRectWhitning4Recognizer()\n",
     "result = eval(model)\n",
     "\n",
-    "df = pd.DataFrame([r.model_dump() for r in result])\n",
+    "df = pd.DataFrame([r.dump() for r in result])\n",
     "df.mean(numeric_only=True)"
    ]
   },
